[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/player/platformChar_idle.png" type="Texture" id=1]
[ext_resource path="res://Assets/player/platformChar_walk1.png" type="Texture" id=2]
[ext_resource path="res://Assets/player/platformChar_walk2.png" type="Texture" id=3]
[ext_resource path="res://Assets/player/platformChar_duck.png" type="Texture" id=4]
[ext_resource path="res://Assets/player/platformChar_jump.png" type="Texture" id=5]
[ext_resource path="res://Assets/player/platformChar_climb1.png" type="Texture" id=6]
[ext_resource path="res://Assets/player/platformChar_climb2.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Player.gd" type="Script" id=8]
[ext_resource path="res://Assets/Player/platformChar_fall.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sounds/smb_jump-super.wav" type="AudioStream" id=10]
[ext_resource path="res://Assets/Sounds/smb3_coin.wav" type="AudioStream" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "walk",
"speed": 7.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "air",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "crouch",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "climb",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 24.0
height = 18.0

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 8 )
SPEED = 280.0
GRAVITY = 38.0
JUMP_SPEED = -1100.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "fall"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 15 )
shape = SubResource( 2 )

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -15.0
mix_target = 2

[node name="CoinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -15.0

[node name="RespawnTimer" type="Timer" parent="."]

[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
